--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Jekyll Resume Theme
 
 # Site settings
-title: Jekyll Resume
-email: email@domain.com
-description: Jekyll Resume is a mega simple resume theme for Jekyll.
+title: C.W. Park CV
+email: ironbear12@kaist.ac.kr
+description: CV of Chulwoong Park
 baseurl: ""
-url: "http://mattcouchman.co.uk/jekyll-resume"
-name: Matt Couchman
-job: front end engineer
-location: Birmingham, UK
-languages: HTML, CSS and Javascript
-twitter_username: mattcouchman
-github_username:  mattcouchman
-codepen_username:  mattcouchman
-email_address: some@email.com
+url: "http://cwoong2park.github.io"
+name: Chulwoong Park
+job: Master Candidate
+school: Korea Advanced Institute of Science and Technology
+lab: Urban Design Lab
+location: Daejeon, South Korea
+languages: Python, HTML
+github_username:  cwoong2park
+email_address: ironbear12@kaist.ac.kr
 
 # Build settings
 markdown: kramdown
