--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: ""
 url: "http://cwoong2park.github.io"
 name: Chulwoong Park
 job: Master Candidate
-school: Korea Advanced Institute of Science and Technology
+school: KAIST
 lab: Urban Design Lab
 location: Daejeon, South Korea
 languages: Python, HTML
