Edit first paragraph & footer

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,11 +1,9 @@
--   qualification: BSc(Hons) Computer Programming
-    school: Oxford
-    description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+-   title: MSc Candidates
+    sub_title: Urban Design Lab, KAIST
+    period: Mar, 2020 - Present
+    description: Master Candidate in Urban Design Lab, KAIST
 
--   qualification: A-Level Computing
-    school: Some High School
-    description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
--   qualification: A-Level Maths
-    school: Some High School
-    description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+-   title: Bachelor
+    sub_title: KAIST
+    period: Feb, 2012 - Feb, 2018
+    description: Major in Department of Civil and Environmental Engineering, Minor in Computer Science
