--- a/_data/teach_experience.yml
+++ b/_data/teach_experience.yml
@@ -1,7 +1,7 @@
 -   title: Teaching Assistant
     subtitle: Department of Civil and Environmental Engineering, KAIST
     period: Mar, 2021 - Jun, 2021
-    description: TA of CE240 - - Introduction to Architecture and Urbanism, CE481 – Special Topic in Civil and Environmental Engineering <Urban Research Methods>, Provide basic of Revit & Formit tutorial
+    description: TA of CE240 - Introduction to Architecture and Urbanism, CE481 – Special Topic in Civil and Environmental Engineering <Urban Research Methods>, Provide basic of Revit & Formit tutorial
 
 -   title: After-school Teacher
     subtitle: Samsung Dreamclass
