--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,4 +6,4 @@
 -   title: Bachelor
     sub_title: KAIST
     period: Feb, 2012 - Feb, 2018
-    description: Major in Department of Civil and Environmental Engineering, Minor in Computer Science
+    description: Major in Department of Civil and Environmental Engineering, | Minor in Computer Science
