--- a/_data/research_experience.yml
+++ b/_data/research_experience.yml
@@ -1,24 +1,24 @@
 -   title: Feasibility Study of Transit-Oriented Development in Ho Chi Minh City, Vietnam 
     sub_title: Research Assistant
     period: Feb, 2021 - Present
-    description: Analyze demographic and social characteristic around Hochimin Metro Stations. Propose feasible Transit-Oriented-Development plan.
+    description: Investigated demographic and social characteristic around Hochimin Metro Stations. Proposed feasible Transit-Oriented-Development plan.
 
 -   title: Mobility-On-Demand in Incheon - Industry-Academic Cooperation Research
     sub_title: Research Assistant
     period: Nov, 2020 - Present
-    description: Analyze GIS data and web-crawled Google Social Network data in Incheon, Address OD-matrix of actual Mobility-On-Demand data and national transportation data.
+    description: Analyzed GIS data and web-crawled Google Social Network data in Incheon, Processed OD-matrix of actual Mobility-On-Demand data and national transportation data.
 
 -   title: Education-research Integration through Simulation On the Net(EDISON)
     sub_title: Research Assistant
     period: Mar, 2020 - Present
-    description: Build land use calculating solver for the purpose of urban planning education, Develop web-visualization viewer for green house gas emission & energy consumption simulator.
+    description: Developed land use calculating solver for the purpose of urban planning education, Developed web-visualization viewer for green house gas emission & energy consumption simulator.
 
 -   title: Urban Declining Area Regenerative Capacity-Enhancing Technology Research Program
     sub_title: Research Assistant
     period: Mar, 2020 - Present
-    description: Analyze climate data for assessing the volunerability of small area, Obtain 3D data using Drone (DJI) & LiDAR (Leica).
+    description: Analyzed climate data for assessing the volunerability of small area, Obtained 3D data using Drone (DJI) & LiDAR (Leica).
 
 -   title: Design of Zero-Energy Smart City 
     sub_title: Undergraduate Research Assistant
     period: May, 2016 - Dec, 2016
-    description: Study smart city & zero energy building, Build visualization model
+    description: Investigated smart city & zero energy building, Made visualization model
