--- a/_data/work_experience.yml
+++ b/_data/work_experience.yml
@@ -1,10 +1,10 @@
 -   title: Samsung C&T
     sub_title: Associate
     period: Feb, 2018 - Feb, 2020
-    description: As a full-time employee engineer, manage construction period, & safety control, address construction cost, maintain the quality of hi-tech manufacturing facility.
+    description: As a full-time employee engineer, managed construction period, & safety control, addressed construction cost, maintained the quality of hi-tech manufacturing facility.
 
 -   title: VS-A.kr
     sub_title: Internship
     period: Jan, 2017 - Feb, 2017
-    description: As a research manager, conduct research for the simulation of water flow pattern on facade based on actual experiment & Grasshopper of Rhinoceros3D. Also build marketing strategy of the facade engineering office.
+    description: As a research manager, conducted research for the simulation of water flow pattern on facade based on actual experiment & Grasshopper of Rhinoceros3D. Also built marketing strategy of the facade engineering office.
 
