--- a/_data/research_interest.yml
+++ b/_data/research_interest.yml
@@ -1,1 +1,2 @@
--   description: Urban Data Science / Urban Planning / Urban Design / Urban Computing / GIS / Accessibility / Transportation / MOD / TOD / Declining City / Data Mining / Big Data
+-   description: I'm focusing on research for how ICT changes people's urban lifestyle and travel behavior. To solve the problem, I prefer to use Python, GIS and Bigdata with webcrawling. Since how people live in city is my focus, I have been equipped with several computer skills including programming, machine learning and data science.
+Urban Data Science / Urban Informatics / AI / GIS / Urban Computing
