--- a/_data/skill.yml
+++ b/_data/skill.yml
@@ -4,7 +4,7 @@
 -   title: Design Tool
     description: Revit, Formit, Rinoceros3D, AutoCAD, Indesign
 
--   title: Hardware
+-   title: Sensor
     description: Drone (DJI, under 2.5kg), Point Cloud Camera (LEIKA)
 
 -   title: Spatial Analysis
