--- a/_data/publication.yml
+++ b/_data/publication.yml
@@ -1,7 +1,7 @@
 -   title: Spatial Impact of Information and Communication Technology - Online Reservation and Restaurants' Location Decisions
     sub_title: Park, C. W. & Kim, Y.
-    period: Under Review
-    description: Under Review
+    period: In Review
+    description: In Review
 
 -   title: Development of a Risk Assessment Model of Rainfall for Small Area in Declining Urban Areas.
     sub_title: Park, C. W., Byun, G., Lee, H. K., Jang, K. M., No, W., & Kim, Y. 
