--- a/_data/research_experience.yml
+++ b/_data/research_experience.yml
@@ -18,6 +18,11 @@
     period: Mar, 2020 - Present
     description: Analyzed climate data for assessing the volunerability of small area, Obtained 3D data using Drone (DJI) & LiDAR (Leica).
 
+    title: Modeling Water Flow on Facade
+    sub_title: Project Manager
+    period: Jan, 2017 - Feb, 2017
+    description: Conducted actual experiment for modeling simulation, Simulated the water flow on object using CFD program (Realflow), Modeled the flow pattern of rainfall on various materials (Grasshopper, Rhino3D).
+
 -   title: Design of Zero-Energy Smart City 
     sub_title: Undergraduate Research Assistant
     period: May, 2016 - Dec, 2016
