--- a/_data/skill.yml
+++ b/_data/skill.yml
@@ -1,5 +1,5 @@
 -   title: Programming Language
-    description: Python, HTML, C
+    description: Python, HTML, C, Java Script
 
 -   title: Design Tool
     description: Revit, Formit, Rinoceros3D, AutoCAD, Indesign
