--- a/_data/work_experience.yml
+++ b/_data/work_experience.yml
@@ -1,4 +1,4 @@
--   title: Samsung C&T
+-   title: Samsung Construction & Trading
     sub_title: Associate
     period: Feb, 2018 - Feb, 2020
     description: As a full-time employee engineer, managed construction period, & safety control, addressed construction cost, maintained the quality of hi-tech manufacturing facility.
@@ -7,4 +7,9 @@
     sub_title: Internship
     period: Jan, 2017 - Feb, 2017
     description: As a research manager, conducted research for the simulation of water flow pattern on facade based on actual experiment & Grasshopper of Rhinoceros3D. Also built marketing strategy of the facade engineering office.
+
+    title: Monthly SPACE Reporter
+    sub_title: Student Reporter
+    period: Feb, 2016 - Feb, 2017
+    description: As a student reporter, wrote an article about local culture and art exhibitions, and participated in an exhibition "Room of tomorrow, without today" with the them of East Asian youth housing in poverty.
 
