--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -1,3 +1,8 @@
+-   title: AI-driven Generation of Urban Block using Generative Adversarial Network – Focused on Seoul
+    sub_title: Park, C. W., Oh, M., Lee, S., Byun, G., & Kim, Y.
+    period: Nov, 2021
+    description: In  2021 Fall Congress of Korea Institute of Ecological Architecture and Environment. Korea Institute of Ecological Architecture and Environment
+
 -   title: Analysis of the Impact of Mega Industrial Facilities on Structural Changes in Urban Space - a Case Study of Pyeongtaek, Korea
     sub_title: Park, C. W. & Kim, Y.
     period: Oct, 2020
