--- a/_data/publication.yml
+++ b/_data/publication.yml
@@ -1,7 +1,12 @@
--   title: Spatial Impact of Information and Communication Technology - Online Reservation and Restaurants' Location Decisions
+-   title: Development of AI-advisor for Conceptual Land Use Planning
     sub_title: Park, C. W. & Kim, Y.
-    period: In Review
-    description: In Review
+    period: (Working paper)
+    description: (Working paper)
+
+-   title: Digitally Accessible Space: Revealing the Spatial Influence of Information and Communication Technology based on the Locational Characteristic of Restaurants with Online Reservation
+    sub_title: Park, C. W. & Kim, Y.
+    period: (Submitted)
+    description: (Submitted)
 
 -   title: Development of a Risk Assessment Model of Rainfall for Small Area in Declining Urban Areas.
     sub_title: Park, C. W., Byun, G., Lee, H. K., Jang, K. M., No, W., & Kim, Y. 
