--- a/_data/work_experience.yml
+++ b/_data/work_experience.yml
@@ -1,3 +1,9 @@
+    title: Urban Design Lab in KAIST
+    sub_title: Researcher
+    period: Mar, 2022 - Present
+    description: As a researcher, I am focusing on AI-driven urban planning and urban modeling with big data.
+
+
 -   title: Samsung Construction & Trading
     sub_title: Associate
     period: Feb, 2018 - Feb, 2020
