--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
--   title: MSc Candidates
+-   title: Master
     sub_title: Urban Design Lab, KAIST
-    period: Mar, 2020 - Present
-    description: Master Candidate in Urban Design Lab, KAIST
+    period: Mar, 2020 - Feb, 2022
+    description: MSc in Urban Design Lab, KAIST
 
 -   title: Bachelor
     sub_title: KAIST
