--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: CV of Chulwoong Park
 baseurl: ""
 url: "http://cwoong2park.github.io"
 name: Chulwoong Park
-job: Master's Candidate
+job: Researcher
 school: KAIST
 lab: Urban Design Lab
 location: Daejeon, South Korea
